--- a/mock-test5.html
+++ b/mock-test5.html
@@ -11,7 +11,9 @@
       margin: 0;
       padding: 2rem;
       color: #333;
+      min-height: 100vh;
     }
+
     .quiz-container {
       max-width: 900px;
       margin: auto;
@@ -20,16 +22,28 @@
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
+
     h1 {
       text-align: center;
       margin-bottom: 1rem;
+      color: #1e88e5;
     }
+
     .question {
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
+      animation: fadeIn 0.5s;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
     .question p {
       font-weight: bold;
+      font-size: 1.1rem;
     }
+
     .options button {
       display: block;
       margin: 0.5rem 0;
@@ -39,41 +53,139 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: all 0.3s;
+      font-size: 1rem;
     }
+
     .options button:hover {
       background: #bbdefb;
+      transform: translateX(5px);
     }
+
     .correct {
       background-color: #c8e6c9 !important;
+      animation: pulse 0.5s;
     }
+
     .wrong {
       background-color: #ffcdd2 !important;
+      animation: shake 0.3s;
     }
-    #score {
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
+    }
+
+    .progress-bar {
+      width: 100%;
+      height: 10px;
+      background: #eee;
+      border-radius: 5px;
+      margin-bottom: 1rem;
+      overflow: hidden;
+    }
+
+    .progress {
+      height: 100%;
+      background: #42a5f5;
+      transition: width 0.3s;
+    }
+
+    #timer {
+      text-align: right;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      color: #d81b60;
+    }
+
+    #score, #results {
       text-align: center;
       font-size: 1.2rem;
       margin-top: 2rem;
       font-weight: bold;
     }
-    #skipped-list {
-      margin-top: 2rem;
+
+    .results-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
     }
+
+    .results-table th, .results-table td {
+      border: 1px solid #ddd;
+      padding: 0.5rem;
+      text-align: left;
+    }
+
+    .results-table th {
+      background: #f5f5f5;
+    }
+
+    .skip-button {
+      background: #fff3cd;
+      margin-top: 1rem;
+      padding: 0.75rem;
+      width: 100%;
+      border: 1px solid #ffca28;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .skip-button:hover {
+      background: #ffecb3;
+    }
+
     .hidden {
       display: none;
+    }
+
+    @media (max-width: 600px) {
+      .quiz-container {
+        padding: 1rem;
+      }
+      .options button {
+        font-size: 0.9rem;
+        padding: 0.5rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="quiz-container">
     <h1>लोक सेवा आयोग – Mock Test 3 (50 Questions)</h1>
+    <div id="timer">Time: 00:00</div>
+    <div class="progress-bar">
+      <div class="progress" id="progress"></div>
+    </div>
     <div id="quiz"></div>
     <div id="score"></div>
-    <div id="skipped-list" class="hidden">
-      <h2>Skipped Questions</h2>
-      <ul id="skipped"></ul>
+    <div id="results" class="hidden">
+      <h2>Quiz Results</h2>
+      <table class="results-table">
+        <thead>
+          <tr>
+            <th>Question</th>
+            <th>Your Answer</th>
+            <th>Correct Answer</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody id="results-body"></tbody>
+      </table>
     </div>
   </div>
+
+  <audio id="correct-sound" src="https://www.soundjay.com/buttons/beep-01a.mp3"></audio>
+  <audio id="wrong-sound" src="https://www.soundjay.com/buttons/beep-02.mp3"></audio>
+
   <script>
     const questions = [
       { q: "Efficiency of Carnot cycle depends on:", options: ["Temperature", "Pressure", "Volume", "Mass"], answer: 0 },
@@ -130,44 +242,109 @@
     let current = 0;
     let score = 0;
     let skipped = [];
+    let userAnswers = Array(questions.length).fill(null);
+    let timerSeconds = 0;
+    let timerInterval;
+    const ANSWER_DELAY = 1500; // 1.5 seconds delay
 
     const quizEl = document.getElementById("quiz");
     const scoreEl = document.getElementById("score");
-    const skippedEl = document.getElementById("skipped-list");
-    const skippedList = document.getElementById("skipped");
+    const resultsEl = document.getElementById("results");
+    const resultsBody = document.getElementById("results-body");
+    const progressEl = document.getElementById("progress");
+    const timerEl = document.getElementById("timer");
+    const correctSound = document.getElementById("correct-sound");
+    const wrongSound = document.getElementById("wrong-sound");
 
-    function shuffleOptions(options) {
-      for (let i = options.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [options[i], options[j]] = [options[j], options[i]];
+    // Load progress from localStorage
+    function loadProgress() {
+      const saved = localStorage.getItem("quizProgress3");
+      if (saved) {
+        const { current: savedCurrent, score: savedScore, skipped: savedSkipped, answers: savedAnswers, time: savedTime } = JSON.parse(saved);
+        current = savedCurrent;
+        score = savedScore;
+        skipped = savedSkipped;
+        userAnswers = savedAnswers || Array(questions.length).fill(null);
+        timerSeconds = savedTime || 0;
       }
-      return options;
     }
 
+    // Save progress to localStorage
+    function saveProgress() {
+      localStorage.setItem("quizProgress3", JSON.stringify({
+        current,
+        score,
+        skipped,
+        answers: userAnswers,
+        time: timerSeconds
+      }));
+    }
+
+    // Shuffle array
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
+    }
+
+    // Shuffle questions only once at initialization
+    const shuffledQuestions = shuffle([...questions]);
+
+    // Start timer
+    function startTimer() {
+      timerInterval = setInterval(() => {
+        timerSeconds++;
+        const minutes = Math.floor(timerSeconds / 60);
+        const seconds = timerSeconds % 60;
+        timerEl.textContent = `Time: ${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+      }, 1000);
+    }
+
+    // Update progress bar
+    function updateProgress() {
+      const percentage = (current / questions.length) * 100;
+      progressEl.style.width = `${percentage}%`;
+    }
+
+    // Show question
     function showQuestion(index) {
-      const q = questions[index];
-      const shuffledOptions = shuffleOptions(q.options.map((opt, i) => ({ text: opt, index: i })));
-      const optionsHTML = shuffledOptions
-        .map(opt => `<button onclick="checkAnswer(this, ${opt.index})">${opt.text}</button>`)
+      const q = shuffledQuestions[index];
+      const shuffledOptions = shuffle([...q.options].map((opt, i) => ({ text: opt, index: i })));
+      const options = shuffledOptions
+        .map(opt => `<button onclick="checkAnswer(this, ${opt.index}, '${opt.text}')">${opt.text}</button>`)
         .join('');
       quizEl.innerHTML = `
         <div class="question">
           <p>Q${index + 1}. ${q.q}</p>
-          <div class="options">${optionsHTML}</div>
-          <button onclick="skipQuestion()">Skip</button>
+          <div class="options">${options}</div>
+          <button class="skip-button" onclick="skipQuestion()">Skip</button>
         </div>
       `;
+      updateProgress();
+      saveProgress();
     }
 
-    function checkAnswer(button, selected) {
-      const correct = questions[current].answer;
+    // Check answer
+    function checkAnswer(button, selected, selectedText) {
+      const q = shuffledQuestions[current];
+      const correct = q.answer;
       const buttons = button.parentElement.querySelectorAll("button");
-      buttons.forEach((btn, i) => {
+      buttons.forEach((btn) => {
         btn.disabled = true;
-        if (i === correct) btn.classList.add("correct");
+        if (q.options.indexOf(btn.innerText) === correct) btn.classList.add("correct");
         if (btn === button && selected !== correct) btn.classList.add("wrong");
       });
-      if (selected === correct) score++;
+
+      userAnswers[current] = selectedText;
+      if (selected === correct) {
+        score++;
+        correctSound.play().catch(() => console.log("Audio playback failed"));
+      } else {
+        wrongSound.play().catch(() => console.log("Audio playback failed"));
+      }
+
       setTimeout(() => {
         current++;
         if (current < questions.length) {
@@ -175,11 +352,15 @@
         } else {
           endQuiz();
         }
-      }, 3000);
+      }, ANSWER_DELAY);
     }
 
+    // Skip question
     function skipQuestion() {
-      skipped.push(questions[current]);
+      if (!skipped.includes(shuffledQuestions[current])) {
+        skipped.push(shuffledQuestions[current]);
+        userAnswers[current] = "Skipped";
+      }
       current++;
       if (current < questions.length) {
         showQuestion(current);
@@ -188,15 +369,38 @@
       }
     }
 
+    // End quiz and show results
     function endQuiz() {
+      clearInterval(timerInterval);
       quizEl.innerHTML = "";
-      scoreEl.innerHTML = `Your score: ${score} / ${questions.length}`;
-      if (skipped.length > 0) {
-        skippedEl.classList.remove("hidden");
-        skippedList.innerHTML = skipped.map((q, i) => `<li>${i + 1}. ${q.q}</li>`).join('');
-      }
+      scoreEl.innerHTML = `Your score: ${score} / ${questions.length} (${((score / questions.length) * 100).toFixed(2)}%)`;
+      resultsEl.classList.remove("hidden");
+
+      resultsBody.innerHTML = shuffledQuestions.map((q, i) => {
+        const userAnswer = userAnswers[i] === null ? "Not attempted" :
+                         userAnswers[i] === "Skipped" ? "Skipped" :
+                         userAnswers[i];
+        const correctAnswer = q.options[q.answer];
+        const status = userAnswers[i] === q.options[q.answer] ? "Correct" :
+                      userAnswers[i] === "Skipped" ? "Skipped" :
+                      userAnswers[i] === null ? "Not attempted" : "Wrong";
+        return `
+          <tr>
+            <td>${i + 1}. ${q.q}</td>
+            <td>${userAnswer}</td>
+            <td>${correctAnswer}</td>
+            <td class="${status.toLowerCase()}">${status}</td>
+          </tr>
+        `;
+      }).join('');
+
+      // Clear localStorage
+      localStorage.removeItem("quizProgress3");
     }
 
+    // Initialize
+    loadProgress();
+    startTimer();
     showQuestion(current);
   </script>
 </body>
