--- a/mock-test1.html
+++ b/mock-test1.html
@@ -32,6 +32,8 @@
     .question {
       margin-bottom: 1.5rem;
       animation: fadeIn 0.5s;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 1rem;
     }
 
     @keyframes fadeIn {
@@ -143,6 +145,28 @@
       background: #ffecb3;
     }
 
+    .next-button {
+      background: #42a5f5;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 1rem;
+      display: block;
+      width: 100%;
+      text-align: center;
+    }
+
+    .next-button:hover {
+      background: #1e88e5;
+    }
+
+    .next-button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+
     .hidden {
       display: none;
     }
@@ -160,7 +184,8 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h1>लोक सेवा आयोग – Mock    <div id="timer">Time: 00:00</div>
+    <h1>लोक सेवा आयोग – Mock Test (50 Questions)</h1>
+    <div id="timer">Time: 00:00</div>
     <div class="progress-bar">
       <div class="progress" id="progress"></div>
     </div>
@@ -186,7 +211,7 @@
   <audio id="wrong-sound" src="https://www.soundjay.com/buttons/beep-02.mp3"></audio>
 
   <script>
-     const questions = [
+    const questions = [
       { q: "An attempt to turn a key into a lock manifests in the application of:", options: ["Coplanar force", "Moment", "Friction", "Tension"], answer: 1 },
       { q: "The maximum frictional force experienced when a body just begins to slide is:", options: ["Dynamic friction", "Static friction", "Rolling friction", "Kinetic friction"], answer: 1 },
       { q: "Which of the following is not a vector quantity?", options: ["Acceleration", "Work", "Velocity", "Force"], answer: 1 },
@@ -240,13 +265,14 @@
       { q: "Which is NOT an advantage of planning?", options: ["Direction", "Uncertainty", "Coordination", "Control"], answer: 1 }
     ];
 
-    let current = 0;
+    let currentPage = 0;
     let score = 0;
     let skipped = [];
     let userAnswers = Array(questions.length).fill(null);
     let timerSeconds = 0;
     let timerInterval;
-    const ANSWER_DELAY = 1000; // 3 seconds delay
+    const QUESTIONS_PER_PAGE = 5;
+    const ANSWER_DELAY = 1500; // 1.5 seconds delay
 
     const quizEl = document.getElementById("quiz");
     const scoreEl = document.getElementById("score");
@@ -259,21 +285,21 @@
 
     // Load progress from localStorage
     function loadProgress() {
-      const saved = localStorage.getItem("quizProgress");
+      const saved = localStorage.getItem("quizProgress50");
       if (saved) {
-        const { current: savedCurrent, score: savedScore, skipped: savedSkipped, answers: savedAnswers, time: savedTime } = JSON.parse(saved);
-        current = savedCurrent;
+        const { currentPage: savedPage, score: savedScore, skipped: savedSkipped, answers: savedAnswers, time: savedTime } = JSON.parse(saved);
+        currentPage = savedPage;
         score = savedScore;
         skipped = savedSkipped;
-        userAnswers = savedAnswers;
-        timerSeconds = savedTime;
+        userAnswers = savedAnswers || Array(questions.length).fill(null);
+        timerSeconds = savedTime || 0;
       }
     }
 
     // Save progress to localStorage
     function saveProgress() {
-      localStorage.setItem("quizProgress", JSON.stringify({
-        current,
+      localStorage.setItem("quizProgress50", JSON.stringify({
+        currentPage,
         score,
         skipped,
         answers: userAnswers,
@@ -281,15 +307,17 @@
       }));
     }
 
-    // Shuffle questions
-    function shuffleArray(array) {
+    // Shuffle array
+    function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
         [array[i], array[j]] = [array[j], array[i]];
       }
+      return array;
     }
 
-    shuffleArray(questions);
+    // Shuffle questions only once at initialization
+    const shuffledQuestions = shuffle([...questions]);
 
     // Start timer
     function startTimer() {
@@ -303,62 +331,95 @@
 
     // Update progress bar
     function updateProgress() {
-      const percentage = (current / questions.length) * 100;
+      const percentage = ((currentPage * QUESTIONS_PER_PAGE) / questions.length) * 100;
       progressEl.style.width = `${percentage}%`;
     }
 
-    // Show question
-    function showQuestion(index) {
-      const q = questions[index];
-      const options = q.options.map((opt, i) => `<button onclick="checkAnswer(this, ${i})">${opt}</button>`).join('');
-      quizEl.innerHTML = `
-        <div class="question">
-          <p>Q${index + 1}. ${q.q}</p>
-          <div class="options">${options}</div>
-          <button class="skip-button" onclick="skipQuestion()">Skip</button>
-        </div>
-      `;
+    // Show questions for the current page
+    function showQuestions(page) {
+      const startIndex = page * QUESTIONS_PER_PAGE;
+      const endIndex = Math.min(startIndex + QUESTIONS_PER_PAGE, questions.length);
+      let html = '';
+      for (let i = startIndex; i < endIndex; i++) {
+        const q = shuffledQuestions[i];
+        const shuffledOptions = shuffle([...q.options].map((opt, j) => ({ text: opt, index: j })));
+        const options = shuffledOptions
+          .map(opt => `<button onclick="checkAnswer(this, ${i}, ${opt.index}, '${opt.text.replace(/'/g, "\\'")}')">${opt.text}</button>`)
+          .join('');
+        html += `
+          <div class="question" data-index="${i}">
+            <p>Q${i + 1}. ${q.q}</p>
+            <div class="options">${options}</div>
+            <button class="skip-button" onclick="skipQuestion(${i})">Skip</button>
+          </div>
+        `;
+      }
+      if (endIndex < questions.length) {
+        html += `<button class="next-button" onclick="nextPage()" disabled>Next</button>`;
+      }
+      quizEl.innerHTML = html;
       updateProgress();
       saveProgress();
+      checkNextButton();
     }
 
     // Check answer
-    function checkAnswer(button, selected) {
-      const correct = questions[current].answer;
+    function checkAnswer(button, questionIndex, selected, selectedText) {
+      const q = shuffledQuestions[questionIndex];
+      const correct = q.answer;
       const buttons = button.parentElement.querySelectorAll("button");
-      buttons.forEach((btn, i) => {
+      buttons.forEach((btn) => {
         btn.disabled = true;
-        if (i === correct) btn.classList.add("correct");
-        if (i === selected && i !== correct) btn.classList.add("wrong");
+        if (q.options.indexOf(btn.innerText) === correct) btn.classList.add("correct");
+        if (btn === button && selected !== correct) btn.classList.add("wrong");
       });
 
-      userAnswers[current] = selected;
+      userAnswers[questionIndex] = selectedText;
       if (selected === correct) {
         score++;
-        correctSound.play();
+        correctSound.play().catch(() => console.log("Audio playback failed"));
       } else {
-        wrongSound.play();
+        wrongSound.play().catch(() => console.log("Audio playback failed"));
       }
 
-      setTimeout(() => {
-        current++;
-        if (current < questions.length) {
-          showQuestion(current);
-        } else {
-          endQuiz();
-        }
-      }, ANSWER_DELAY);
+      saveProgress();
+      checkNextButton();
     }
 
     // Skip question
-    function skipQuestion() {
-      if (!skipped.includes(questions[current])) {
-        skipped.push(questions[current]);
-        userAnswers[current] = "Skipped";
+    function skipQuestion(questionIndex) {
+      if (!skipped.includes(shuffledQuestions[questionIndex])) {
+        skipped.push(shuffledQuestions[questionIndex]);
+        userAnswers[questionIndex] = "Skipped";
       }
-      current++;
-      if (current < questions.length) {
-        showQuestion(current);
+      const buttons = document.querySelector(`.question[data-index="${questionIndex}"] .options`).querySelectorAll("button");
+      buttons.forEach(btn => btn.disabled = true);
+      saveProgress();
+      checkNextButton();
+    }
+
+    // Check if all questions on the page are answered or skipped
+    function checkNextButton() {
+      const startIndex = currentPage * QUESTIONS_PER_PAGE;
+      const endIndex = Math.min(startIndex + QUESTIONS_PER_PAGE, questions.length);
+      let allAnswered = true;
+      for (let i = startIndex; i < endIndex; i++) {
+        if (userAnswers[i] === null) {
+          allAnswered = false;
+          break;
+        }
+      }
+      const nextButton = document.querySelector(".next-button");
+      if (nextButton) {
+        nextButton.disabled = !allAnswered;
+      }
+    }
+
+    // Move to next page
+    function nextPage() {
+      currentPage++;
+      if (currentPage * QUESTIONS_PER_PAGE < questions.length) {
+        showQuestions(currentPage);
       } else {
         endQuiz();
       }
@@ -371,13 +432,13 @@
       scoreEl.innerHTML = `Your score: ${score} / ${questions.length} (${((score / questions.length) * 100).toFixed(2)}%)`;
       resultsEl.classList.remove("hidden");
 
-      resultsBody.innerHTML = questions.map((q, i) => {
-        const userAnswer = userAnswers[i] === null ? "Not attempted" : 
-                         userAnswers[i] === "Skipped" ? "Skipped" : 
-                         q.options[userAnswers[i]];
+      resultsBody.innerHTML = shuffledQuestions.map((q, i) => {
+        const userAnswer = userAnswers[i] === null ? "Not attempted" :
+                         userAnswers[i] === "Skipped" ? "Skipped" :
+                         userAnswers[i];
         const correctAnswer = q.options[q.answer];
-        const status = userAnswers[i] === q.answer ? "Correct" : 
-                      userAnswers[i] === "Skipped" ? "Skipped" : 
+        const status = userAnswers[i] === q.options[q.answer] ? "Correct" :
+                      userAnswers[i] === "Skipped" ? "Skipped" :
                       userAnswers[i] === null ? "Not attempted" : "Wrong";
         return `
           <tr>
@@ -390,13 +451,13 @@
       }).join('');
 
       // Clear localStorage
-      localStorage.removeItem("quizProgress");
+      localStorage.removeItem("quizProgress50");
     }
 
     // Initialize
     loadProgress();
     startTimer();
-    showQuestion(current);
+    showQuestions(currentPage);
   </script>
 </body>
 </html>
